--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <button class="desktop" href="">Tenho interesse</button>
                 </div>
                 <div class="right-area">
-                    <img alt="Banner desktop" class="desktop" src="assets/banner.png" />
+                    <img alt="Banner desktop" class="desktop" src="assets/opala-1.png" />
                     <img alt="Banner mobile" class="mobile" src="assets/email-car.png" />
                 </div>
                 <button class="mobile">Tenho interesse</button>
@@ -49,9 +49,9 @@
                 <button class="desktop">Ver mais</button>
             </div>
             <div class="gallery-photos">
-                <img alt="Imagem 1 da galeria" src="assets/img-1.png" />
-                <img alt="Imagem 2 da galeria" src="assets/img-2.png" />
-                <img alt="Imagem 3 da galeria" src="assets/img-3.png" />
+                <img alt="Imagem 1 da galeria" src="assets/img-1-1.jpg" />
+                <img alt="Imagem 2 da galeria" src="assets/img-2-2.jpg" />
+                <img alt="Imagem 3 da galeria" src="assets/img-3.jpg" />
             </div>
             <button class="mobile">Ver mais</button>
         </section>
@@ -59,29 +59,30 @@
             <div class="versions-left-area">
                 <h3>Escolha versão que <br />combina com você.</h3>
                 <div class="versions-buttons">
-                    <button class="active">Aventador S</button>
-                    <button>Aventador B7</button>
+                    <button class="active">Opala SS</button>
+                    <button>Opala Diplomata</button>
+                    <button>Opala Comodoro</button>
                 </div>
-                <img alt="Imagem da versão do carro" src="assets/img-carro 1.png" />
-                <div class="versions-price">A partir de <span><strong><i>R$1.115.000,00</i></strong></span></div>
+                <img alt="Imagem da versão do carro" src="assets/img-carro-1-1.png" />
+                <div class="versions-price">A partir de <span><strong><i>R$ 75.000,00</i></strong></span></div>
             </div>
             <div class="versions-right-area">
-                <h3>Diferenciais da Aventador S</h3>
+                <h3>Diferenciais do Opala SS</h3>
                 <div class="versions-features">
                     <img alt="Bomba de gasolina" src="assets/gas-station-line.png" />
-                    <p>Consumo médio de 16.9 litros/100 km</p>
+                    <p>Consumo médio de 4.8 Km/l</p>
                 </div>
                 <div class="versions-features">
                     <img alt="Cronômetro" src="assets/timer-line.png" />
-                    <p>0 aos 100 km/h em 2.9 segundos</p>
+                    <p>0 aos 100 km/h em 12.8 segundos</p>
                 </div>
                 <div class="versions-features">
                     <img alt="Velecímetro" src="assets/speed-up-fill.png" />
-                    <p>Velocidade máxima de 350 km/h</p>
+                    <p>Velocidade máxima de 200 km/h</p>
                 </div>
                 <div class="versions-features last">
                     <img alt="Raio" src="assets/flashlight-line.png" />
-                    <p>Potência máxima de 740 CV</p>
+                    <p>Potência máxima de 171 CV</p>
                 </div>
                 <button>Tenho interesse</button>
             </div>
