--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <button class="desktop" href="">Tenho interesse</button>
                 </div>
                 <div class="right-area">
-                    <img alt="Banner desktop" class="desktop" src="assets/opala-1.png" />
+                    <img alt="Banner desktop" class="desktop" src="assets/Opala-1.png" />
                     <img alt="Banner mobile" class="mobile" src="assets/email-car.png" />
                 </div>
                 <button class="mobile">Tenho interesse</button>
