--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </section>
         <section class="keep-touch">
             <div class="area-1">
-                <h2><i>Aw2Car</i></h2>
+                <h2><i>Aw2.Car</i></h2>
                 <p>O carro perfeito para você.</p>
             </div>
             <div class="area-2">
